# dagster-gadgetbridge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pipeline.yml
data/: medicine_skips.csv  prescriptions.csv
helm-charts/values/: prod.yaml
src/gadgetbridge_pipeline/defs/: resources.py
src/gadgetbridge_pipeline/defs/assets/: bronze.py  gold.py  medicine.py  owntracks_bronze.py  raw.py  silver.py
src/gadgetbridge_pipeline/defs/schedules/: medicine_schedule.py
src/gadgetbridge_pipeline/defs/sensors/: medicine_s3_sensor.py  owntracks_s3_sensor.py  s3_sensor.py
tests/: test_bronze.py  test_gold.py  test_medicine.py  test_medicine_s3_sensor.py  test_medicine_schedule.py  test_owntracks_bronze.py  test_owntracks_s3_sensor.py  test_s3_sensor.py  test_silver.py
