[project]
name = "gadgetbridge_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "connectorx>=0.4.5",
    "dagster==1.13.8",
    "dagster-aws>=0.29.8",
    "dagster-deltalake>=0.29.8",
    "dagster-deltalake-polars>=0.29.8",
    "dagster-k8s>=0.29.8",
    "dagster-postgres>=0.29.8",
    "duckdb>=1.5.3",
    "polars>=1.41.2",
    "pytest (>=9.1.1,<10.0.0)",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "gadgetbridge_pipeline"
registry_modules = [
    "gadgetbridge_pipeline.components.*",
]
