[project]
name = "gadgetbridge_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "connectorx>=0.4.5",
    "dagster==1.13.14",
    "dagster-aws>=0.29.8",
    "dagster-deltalake>=0.29.8",
    "dagster-deltalake-polars>=0.29.8",
    "dagster-k8s>=0.29.8",
    "dagster-openlineage>=0.2.1",
    "dagster-postgres>=0.29.8",
    "polars>=1.41.2",
    "pandera[polars]>=0.32.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli>=1.13.10",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.18",
    "marimo>=0.23.14",
    "altair>=6.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.pytest.ini_options]
addopts = "--cov=gadgetbridge_pipeline --cov-report=term-missing"

[tool.coverage.run]
source = ["src/gadgetbridge_pipeline"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "gadgetbridge_pipeline"
registry_modules = [
    "gadgetbridge_pipeline.components.*",
]
